fix weird jump

--- a/css/shop.css
+++ b/css/shop.css
@@ -238,7 +238,7 @@
 	opacity:1;
 	width:100px;
 	animation:shrink 1s;
-	animation:jump 1s infinite;
+	animation:jump 3s 2;
 }
 
 @keyframes shrink{
@@ -268,11 +268,11 @@
 
 @keyframes jump{
 	0%{
-		position:relative;
-		top:0px;
-	}20%{
-		position:relative;
-		top:-10px;
+		transform:scale(1,1);
+	}50%{
+		transform:scale(1.2,1.2);
+	}100%{
+		transform:scale(1,1);
 	}
 }
 
